--- a/src/figoo/resources/FigooView.properties
+++ b/src/figoo/resources/FigooView.properties
@@ -63,3 +63,16 @@ jButton13.background=255, 255, 255
 #NOI18N
 jButton13.icon=/figoo/icon/picasaC.png
 jButton14.text=Download  (F8)
+jButton15.toolTipText=Log in to Google Documents
+#NOI18N
+jButton15.background=255, 255, 255
+#NOI18N
+jButton15.icon=/figoo/icon/docs.jpg
+jButton16.toolTipText=Logout from Google Documents
+#NOI18N
+jButton16.background=255, 255, 255
+#NOI18N
+jButton16.icon=/figoo/icon/docsOut.jpg
+doc.icon=/figoo/icon/doc.gif
+xls.icon=/figoo/icon/xls.gif
+ppt.icon=/figoo/icon/ppt.gif
