--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,11 +22,13 @@ dist.jar=${dist.dir}/Figoo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gdata-client-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata-src.java-1.33.0\\gdata\\java\\lib\\gdata-client-1.0.jar
-file.reference.gdata-core-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata-src.java-1.33.0\\gdata\\java\\lib\\gdata-core-1.0.jar
-file.reference.gdata-maps-2.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata-src.java-1.33.0\\gdata\\java\\lib\\gdata-maps-2.0.jar
-file.reference.gdata-media-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata-src.java-1.33.0\\gdata\\java\\lib\\gdata-media-1.0.jar
-file.reference.gdata-photos-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata-src.java-1.33.0\\gdata\\java\\lib\\gdata-photos-1.0.jar
+file.reference.gdata-base-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-base-1.0.jar
+file.reference.gdata-core-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-core-1.0.jar
+file.reference.gdata-docs-3.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-docs-3.0.jar
+file.reference.gdata-maps-2.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-maps-2.0.jar
+file.reference.gdata-media-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-media-1.0.jar
+file.reference.gdata-photos-2.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-photos-2.0.jar
+file.reference.gdata-spreadsheet-3.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-spreadsheet-3.0.jar
 file.reference.google-collect-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\google-collect-1.0\\google-collect-1.0\\google-collect-1.0.jar
 file.reference.google-collect-1.0.jar-1=C:\\Users\\Lada Riha\\java\\lib\\google-collect-1.0.jar
 file.reference.java-image-scaling-0.8.4.jar=C:\\Aplikace\\java-image-scaling-0.8.4.jar
@@ -39,17 +41,19 @@ javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.swing-layout.classpath}:\
-    ${file.reference.gdata-client-1.0.jar}:\
-    ${file.reference.gdata-core-1.0.jar}:\
-    ${file.reference.gdata-media-1.0.jar}:\
-    ${file.reference.gdata-photos-1.0.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.google-collect-1.0.jar}:\
     ${file.reference.google-collect-1.0.jar-1}:\
-    ${file.reference.gdata-maps-2.0.jar}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.gdata-base-1.0.jar}:\
+    ${file.reference.gdata-core-1.0.jar}:\
+    ${file.reference.gdata-docs-3.0.jar}:\
+    ${file.reference.gdata-maps-2.0.jar}:\
+    ${file.reference.gdata-media-1.0.jar}:\
+    ${file.reference.gdata-photos-2.0.jar}:\
     ${file.reference.looks-2.0.1.jar}:\
-    ${file.reference.java-image-scaling-0.8.4.jar}
+    ${file.reference.java-image-scaling-0.8.4.jar}:\
+    ${file.reference.gdata-spreadsheet-3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
