added thumbmail in properties dialog

--- a/src/figoo/resources/FigooApp.properties
+++ b/src/figoo/resources/FigooApp.properties
@@ -2,10 +2,10 @@
 
 Application.name = Figoo
 Application.title = Figoo - simple file manager
-Application.version = 2.0.1
+Application.version = 2.1.0
 Application.vendor = 
 Application.homepage = http\://ladariha.cz/
 Application.description = A simple Java desktop application
 Application.vendorId = 
-Application.id = ${Application.name}
+Application.id = Figoo
 Application.lookAndFeel = system
