--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,18 +22,20 @@ dist.jar=${dist.dir}/Figoo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gdata-base-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-base-1.0.jar
-file.reference.gdata-core-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-core-1.0.jar
-file.reference.gdata-docs-3.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-docs-3.0.jar
-file.reference.gdata-maps-2.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-maps-2.0.jar
-file.reference.gdata-media-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-media-1.0.jar
-file.reference.gdata-photos-2.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-photos-2.0.jar
-file.reference.gdata-spreadsheet-3.0.jar=C:\\Users\\Lada Riha\\java\\lib\\gdata.java-1.41.3\\gdata\\java\\lib\\gdata-spreadsheet-3.0.jar
+file.reference.gdata-base-1.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-base-1.0.jar
+file.reference.gdata-client-1.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-client-1.0.jar
+file.reference.gdata-core-1.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-core-1.0.jar
+file.reference.gdata-docs-3.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-docs-3.0.jar
+file.reference.gdata-media-1.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-media-1.0.jar
+file.reference.gdata-photos-2.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-photos-2.0.jar
+file.reference.gdata-photos-meta-2.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-photos-meta-2.0.jar
+file.reference.gdata-spreadsheet-3.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-spreadsheet-3.0.jar
 file.reference.google-collect-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\google-collect-1.0\\google-collect-1.0\\google-collect-1.0.jar
 file.reference.java-image-scaling-0.8.4.jar=C:\\Aplikace\\java-image-scaling-0.8.4.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\Lada Riha\\java\\lib\\jcalendar-1.3.3\\lib\\jcalendar-1.3.3.jar
 file.reference.looks-2.0.1.jar=C:\\Users\\Lada Riha\\java\\lib\\jcalendar-1.3.3\\lib\\looks-2.0.1.jar
 file.reference.mail.jar=C:\\Users\\Lada Riha\\java\\lib\\javamail-1.4.3\\javamail-1.4.3\\mail.jar
+file.reference.PDFRenderer.jar=C:\\Users\\Lada Riha\\java\\lib\\PDFRenderer.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,22 +43,24 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.swing-layout.classpath}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.google-collect-1.0.jar}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.looks-2.0.1.jar}:\
     ${file.reference.gdata-base-1.0.jar}:\
     ${file.reference.gdata-core-1.0.jar}:\
     ${file.reference.gdata-docs-3.0.jar}:\
-    ${file.reference.gdata-maps-2.0.jar}:\
     ${file.reference.gdata-media-1.0.jar}:\
     ${file.reference.gdata-photos-2.0.jar}:\
-    ${file.reference.looks-2.0.1.jar}:\
     ${file.reference.java-image-scaling-0.8.4.jar}:\
-    ${file.reference.gdata-spreadsheet-3.0.jar}
+    ${file.reference.google-collect-1.0.jar}:\
+    ${file.reference.gdata-spreadsheet-3.0.jar}:\
+    ${file.reference.gdata-client-1.0.jar}:\
+    ${file.reference.gdata-photos-meta-2.0.jar}:\
+    ${file.reference.PDFRenderer.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -74,6 +78,11 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jnlp.codebase.type=local
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=figoo.FigooApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
