--- a/src/figoo/resources/PropertiesDialog.properties
+++ b/src/figoo/resources/PropertiesDialog.properties
@@ -39,3 +39,8 @@ jTextField1.text=
 jPanel1.background=255, 255, 255
 #NOI18N
 Form.background=${null}
+jLabel16.text=SHA1:
+#NOI18N
+jLabel16.font=Tahoma-Bold-11
+jPanel3.TabConstraints.tabTitle=Thumbmail
+jButton2.text=OK
