Added support for ID3 and EXIF

--- a/src/figoo/resources/PropertiesDialog.properties
+++ b/src/figoo/resources/PropertiesDialog.properties
@@ -27,7 +27,6 @@ jLabel13.text=modif
 jLabel14.text=Permissions:
 #NOI18N
 jLabel14.font=Tahoma-Bold-11
-jButton1.text=OK
 jCheckBox1.text=Read
 jCheckBox2.text=Write
 jCheckBox3.text=Execute
@@ -43,4 +42,8 @@ jLabel16.text=SHA1:
 #NOI18N
 jLabel16.font=Tahoma-Bold-11
 jPanel3.TabConstraints.tabTitle=Thumbmail
-jButton2.text=OK
+jButton3.text=OK
+jPanel6.TabConstraints.tabTitle=Details
+jLabel17.text=
+#NOI18N
+jLabel17.font=Tahoma-Bold-11
