--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,12 @@ file.reference.gdata-photos-2.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-
 file.reference.gdata-photos-meta-2.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-photos-meta-2.0.jar
 file.reference.gdata-spreadsheet-3.0.jar=C:\\Users\\Lada Riha\\Downloads\\gdata.java-1.41.4\\gdata\\java\\lib\\gdata-spreadsheet-3.0.jar
 file.reference.google-collect-1.0.jar=C:\\Users\\Lada Riha\\java\\lib\\google-collect-1.0\\google-collect-1.0\\google-collect-1.0.jar
+file.reference.jaudiotagger-2.0.3-SNAPSHOT.jar=C:\\Users\\Lada Riha\\java\\lib\\jaudiotagger-2.0.3-SNAPSHOT.jar
 file.reference.java-image-scaling-0.8.4.jar=C:\\Aplikace\\java-image-scaling-0.8.4.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\Lada Riha\\java\\lib\\jcalendar-1.3.3\\lib\\jcalendar-1.3.3.jar
 file.reference.looks-2.0.1.jar=C:\\Users\\Lada Riha\\java\\lib\\jcalendar-1.3.3\\lib\\looks-2.0.1.jar
 file.reference.mail.jar=C:\\Users\\Lada Riha\\java\\lib\\javamail-1.4.3\\javamail-1.4.3\\mail.jar
+file.reference.metadata-extractor-2.4.0-beta-1.jar=C:\\Users\\Lada Riha\\java\\lib\\metadata-extractor-2.4.0-beta-1.jar
 file.reference.PDFRenderer.jar=C:\\Users\\Lada Riha\\java\\lib\\PDFRenderer.jar
 includes=**
 jar.compress=false
@@ -55,7 +57,9 @@ javac.classpath=\
     ${file.reference.gdata-spreadsheet-3.0.jar}:\
     ${file.reference.gdata-client-1.0.jar}:\
     ${file.reference.gdata-photos-meta-2.0.jar}:\
-    ${file.reference.PDFRenderer.jar}
+    ${file.reference.PDFRenderer.jar}:\
+    ${file.reference.metadata-extractor-2.4.0-beta-1.jar}:\
+    ${file.reference.jaudiotagger-2.0.3-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
