added -hash check -file structure to clipboard/file

--- a/src/figoo/resources/FigooView.properties
+++ b/src/figoo/resources/FigooView.properties
@@ -76,3 +76,14 @@ jButton16.icon=/figoo/icon/docsOut.jpg
 doc.icon=/figoo/icon/doc.gif
 xls.icon=/figoo/icon/xls.gif
 ppt.icon=/figoo/icon/ppt.gif
+jButton17.toolTipText=Copy list of files and folders to clipboard
+
+#NOI18N
+jButton17.background=255, 255, 255
+#NOI18N
+jButton17.icon=/figoo/icon/folder_lightbulb.png
+jButton18.toolTipText=Save list of files and folders to file
+#NOI18N
+jButton18.background=255, 255, 255
+#NOI18N
+jButton18.icon=/figoo/icon/folder_page.png
