--- a/src/figoo/resources/PropertiesDialog.properties
+++ b/src/figoo/resources/PropertiesDialog.properties
@@ -47,3 +47,22 @@ jPanel6.TabConstraints.tabTitle=Details
 jLabel17.text=
 #NOI18N
 jLabel17.font=Tahoma-Bold-11
+jButton1.text=Check from clipboard
+jTextField3.text=
+jButton2.text=Check from field
+jLabel18.text=Result for MD5:
+#NOI18N
+jLabel18.font=Tahoma-Bold-11
+jLabel19.text=Result for SHA1:
+#NOI18N
+jLabel19.font=Tahoma 11 Bold
+jLabel20.text=
+#NOI18N
+jLabel20.icon=/figoo/icon/help.png
+jLabel20.iconCorrect=/figoo/icon/accept.png
+jLabel20.iconIncorrect=/figoo/icon/cancel.png
+#NOI18N
+jLabel21.icon=/figoo/icon/help.png
+jLabel21.iconCorrect=/figoo/icon/accept.png
+jLabel21.iconIncorrect=/figoo/icon/cancel.png
+jTextField3.toolTipText=Type your hash
