--- a/src/figoo/resources/DocLogin.properties
+++ b/src/figoo/resources/DocLogin.properties
@@ -12,7 +12,7 @@ Form.background=255, 255, 255
 jPanel1.background=255, 255, 255
 jLabel3.text=Username:
 jLabel4.text=Password:
-jTextField1.text=user
+jTextField1.text=
 jButton1.text=OK
 jButton2.text=Cancel
-jPasswordField1.text=pass
+jPasswordField1.text=
