merge/combine function

--- a/src/figoo/resources/FigooView.properties
+++ b/src/figoo/resources/FigooView.properties
@@ -42,48 +42,53 @@ jButton7.text=Delete (F7)
 jButton8.text=Upload (F8)
 jButton9.text=\
 #NOI18N
-jButton9.icon=/figoo/icon/arrow_refresh_small.png
 #NOI18N
 jButton9.font=Tahoma-Plain-3
 jButton10.text=
 jButton10.toolTipText=Duplicate left view to right view
-#NOI18N
-jButton10.icon=/figoo/icon/arrow_right.png
 jButton11.toolTipText=Duplicate right view to left view
-#NOI18N
-jButton11.icon=/figoo/icon/arrow_left.png
 jButton12.toolTipText=Log in to Picasa
-#NOI18N
-jButton12.icon=/figoo/icon/picasa.jpg
-#NOI18N
-jButton12.background=255, 255, 255
 jButton13.toolTipText=Logout from Picasa
-#NOI18N
-jButton13.background=255, 255, 255
-#NOI18N
-jButton13.icon=/figoo/icon/picasaC.png
 jButton14.text=Download  (F8)
 jButton15.toolTipText=Log in to Google Documents
-#NOI18N
-jButton15.background=255, 255, 255
-#NOI18N
-jButton15.icon=/figoo/icon/docs.jpg
 jButton16.toolTipText=Logout from Google Documents
-#NOI18N
-jButton16.background=255, 255, 255
-#NOI18N
-jButton16.icon=/figoo/icon/docsOut.jpg
 doc.icon=/figoo/icon/doc.gif
 xls.icon=/figoo/icon/xls.gif
 ppt.icon=/figoo/icon/ppt.gif
 jButton17.toolTipText=Copy list of files and folders to clipboard
-
+jButton18.toolTipText=Save list of files and folders to file
+jMenuItem1.text=Split file
+jMenuItem2.text=Copy list of files and folders to clipboard
+jMenuItem3.text=Save list of files and folders to file
+jButton19.toolTipText=Split file
 #NOI18N
-jButton17.background=255, 255, 255
+jButton19.icon=/figoo/icon/table_multiple.png
+#NOI18N
+jButton11.icon=/figoo/icon/arrow_left.png
+#NOI18N
+jButton12.icon=/figoo/icon/picasa.jpg
+#NOI18N
+jButton10.icon=/figoo/icon/arrow_right.png
 #NOI18N
 jButton17.icon=/figoo/icon/folder_lightbulb.png
-jButton18.toolTipText=Save list of files and folders to file
+jButton9.icon=/figoo/icon/arrow_refresh_small.png
 #NOI18N
-jButton18.background=255, 255, 255
+jButton16.icon=/figoo/icon/docsOut.jpg
 #NOI18N
 jButton18.icon=/figoo/icon/folder_page.png
+#NOI18N
+jButton15.icon=/figoo/icon/docs.jpg
+#NOI18N
+jButton13.icon=/figoo/icon/picasaC.png
+jButton20.toolTipText=Combine files
+#NOI18N
+jButton20.icon=/figoo/icon/table_relationship.png
+jMenuItem4.text=Combine files
+#NOI18N
+jMenuItem2.icon=/figoo/icon/folder_lightbulb_small.png
+#NOI18N
+jMenuItem3.icon=/figoo/icon/folder_page_small.png
+#NOI18N
+jMenuItem4.icon=/figoo/icon/table_relationship_small.png
+#NOI18N
+jMenuItem1.icon=/figoo/icon/table_multiple_small.png
