added batch copy&rename function

--- a/src/figoo/resources/FigooView.properties
+++ b/src/figoo/resources/FigooView.properties
@@ -92,3 +92,10 @@ jMenuItem3.icon=/figoo/icon/folder_page_small.png
 jMenuItem4.icon=/figoo/icon/table_relationship_small.png
 #NOI18N
 jMenuItem1.icon=/figoo/icon/table_multiple_small.png
+jMenuItem5.text=Batch rename
+#NOI18N
+jMenuItem5.icon=/figoo/icon/page_white_stack.png
+#NOI18N
+exitMenuItem.icon=/figoo/icon/cross.png
+#NOI18N
+aboutMenuItem.icon=/figoo/icon/information.png
