--- a/src/figoo/resources/FigooView.properties
+++ b/src/figoo/resources/FigooView.properties
@@ -99,3 +99,6 @@ jMenuItem5.icon=/figoo/icon/page_white_stack.png
 exitMenuItem.icon=/figoo/icon/cross.png
 #NOI18N
 aboutMenuItem.icon=/figoo/icon/information.png
+jButton21.toolTipText=Create M3U playlist
+#NOI18N
+jButton21.icon=/figoo/icon/music.png
